Change color of buttons

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 nav {
     display: flex;
     justify-content: start;
-    background-color: #1f2421;
+    background-color: #241f1f;
 }
 
 nav p {
