--- a/styles.css
+++ b/styles.css
@@ -19,39 +19,37 @@ nav p {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
     color: #000000;
-    padding: 20px;
+    padding: 1em;
 }
 
 main {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding-top: 10em;
+    width: 60%;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 100px;
     text-align: center;
 }
 
 h1 {
-    font-size: 100px;
+    font-size: 5rem;
     font-weight: 600;
     font-family: Arial, Helvetica, sans-serif;
     color: #242424;
 }
 
 main button {
-    font-size: 40px;
+    font-size: 2rem;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
     color: #000000;
     background-color: #ffcb77;
-    padding: 20px 60px 20px 60px;
+    padding: .8em 1.5em;
     border-radius: 15px;
     border: 0px;
-    margin-top: 20px;
+    margin-top: 4em;
 }
 
 button:hover{
@@ -63,9 +61,9 @@ div {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    gap: 20px;
+    gap: 2em;
 }
 
 #playAgain {
-    height: 100px;
+    height: 3em;
 }
