--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ h1 {
     font-weight: 600;
     font-family: Arial, Helvetica, sans-serif;
     color: #242424;
+    margin-bottom: 2em;
 }
 
 main button {
@@ -49,7 +50,6 @@ main button {
     padding: .8em 1.5em;
     border-radius: 15px;
     border: 0px;
-    margin-top: 4em;
 }
 
 button:hover{
@@ -66,4 +66,19 @@ div {
 
 #playAgain {
     height: 3em;
+    margin-top: 3em;
+    margin-bottom: 3em;
+}
+
+@media (max-width : 650px){
+    h1 {
+        font-size: 2rem;
+        font-weight: 600;
+        font-family: Arial, Helvetica, sans-serif;
+        color: #242424;
+    }
+
+    main button {
+        font-size: 1rem;
+    }
 }
